<resources>
    <string name="app_name">SQL DB App</string>
    <string name="exitTitle">Exit</string>
    <string name="initializeDBTitle">Initialize DB</string>
    <string name="deleteDBTitle">Delete DB</string>
    <string name="clearDBTitle">Clear DB</string>
    <string name="displayDBTitle">Display DB Content</string>
    <string name="addPersonTitle">Add person</string>
    <string name="removePersonTitle">Remove person</string>
    <string name="enter_name_hint">Enter Name</string>
    <string name="enter_email_hint">Enter Email</string>
    <string name="enter_phone_number_hint">Enter Phone Number</string>
    <string name="db_details_hint">DB Details</string>
    <string name="enter_id_hint">Enter ID</string>
</resources>
