<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kapucin28.sqldbapp.MainActivity">

    <item
        android:id="@+id/exit_app"
        android:orderInCategory="100"
        android:title="@string/exitTitle"
        app:showAsAction="never" />

    <item
        android:id="@+id/create_database"
        android:orderInCategory="101"
        android:title="@string/initializeDBTitle"
        app:showAsAction="never" />

    <item
        android:id="@+id/delete_database"
        android:orderInCategory="102"
        android:title="@string/deleteDBTitle"
        app:showAsAction="never" />

    <item
        android:id="@+id/display_DB"
        android:orderInCategory="104"
        android:title="@string/displayDBTitle"
        app:showAsAction="never" />

    <item
        android:id="@+id/clear_DB"
        android:orderInCategory="103"
        android:title="@string/clearDBTitle"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_person"
        android:orderInCategory="105"
        android:title="@string/addPersonTitle"
        app:showAsAction="never" />

    <item
        android:id="@+id/remove_person"
        android:orderInCategory="106"
        android:title="@string/removePersonTitle"
        app:showAsAction="never" />

</menu>